tests/fixtures/semantics/valid/return_ok_from_error_union.ora
fn foo() -> !u32 | E1 {
    return 42;
}


