tests/fixtures/semantics/invalid/try_on_non_error_union.ora
fn baz() -> u32 {
    const x: u32 = 5;
    const y = try x; // invalid: try on non-!T
    return y;
}


